applications/cosense-cli-mcp/resources/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: service

spec:
  selector:
    app: cosense-cli-mcp
  type: ClusterIP
  ipFamilies:
    - IPv4
    - IPv6
  ipFamilyPolicy: RequireDualStack
  ports:
    - name: http
      port: 3000
      targetPort: http
